objects/UNITY_Service_Contract__c.object
<CustomObject>
    <description>Unity project Service Contract object to capture contract for Customer or Vendor specific to labor, parts pricing, etc.</description>
    <fields>
        <fullName>Default_Customer_Service_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Customer Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_yrs__c</fullName>
        <label>Renewal Term (Yrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITYPM_PMO_NTE__c</fullName>
        <description>NTE for PMO Work Order</description>
        <label>PMO NTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_2_Technicians__c</fullName>
        <description>2 Technician Labor Multiplier</description>
        <label>2 Technicians</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Account_Record_Type__c</fullName>
        <formula>IF( UNITY_Account__r.RecordType.Name = &quot;Customer&quot;, &quot;Customer&quot;, IF( (UNITY_Account__r.RecordType.Name = &quot;Vendor&quot;|| UNITY_Account__r.RecordType.Name = &quot;Miner&quot;), &quot;Vendor&quot;, &quot;&quot;))</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Amount_of_Onsite_Money_Allowed__c</fullName>
        <label>Amount of Onsite Money Allowed</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Apprentice__c</fullName>
        <description>Apprentice Multiplier</description>
        <label>Apprentice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_BU_Craft_SC_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU Craft SC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_BU_MNS_SC_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU MNS SC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_BU_MSP_SC_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU MSP SC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_BU_NSBS_SC_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU NSBS SC ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Bundling_Requirements__c</fullName>
        <label>Bundling Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Craft</fullName>
                </value>
                <value>
                    <fullName>MNS</fullName>
                </value>
                <value>
                    <fullName>MSP Atlanta</fullName>
                </value>
                <value>
                    <fullName>MSP Conroe (CDC)</fullName>
                </value>
                <value>
                    <fullName>MSP Dallas</fullName>
                </value>
                <value>
                    <fullName>MSP Dallas (CDC)</fullName>
                </value>
                <value>
                    <fullName>MSP El Paso</fullName>
                </value>
                <value>
                    <fullName>MSP Houston</fullName>
                </value>
                <value>
                    <fullName>MSP Houston (CDC)</fullName>
                </value>
                <value>
                    <fullName>MSP Jacksonville</fullName>
                </value>
                <value>
                    <fullName>MSP Memphis</fullName>
                </value>
                <value>
                    <fullName>MSP Miami</fullName>
                </value>
                <value>
                    <fullName>MSP Nashville</fullName>
                </value>
                <value>
                    <fullName>MSP New Orleans</fullName>
                </value>
                <value>
                    <fullName>MSP Orlando</fullName>
                </value>
                <value>
                    <fullName>MSP Phoenix</fullName>
                </value>
                <value>
                    <fullName>MSP San Antonio</fullName>
                </value>
                <value>
                    <fullName>MSP Tampa</fullName>
                </value>
                <value>
                    <fullName>NSBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Channel_for_Submitting_Quotes__c</fullName>
        <label>Channel for Submitting Quotes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Web-Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Miner Customer Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Channel_of_Communication__c</fullName>
        <label>Channel of Communication For Updates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>FM Pilot2</fullName>
                </value>
                <value>
                    <fullName>Service Channel</fullName>
                </value>
                <value>
                    <fullName>WON</fullName>
                </value>
                <value>
                    <fullName>Work Oasis</fullName>
                </value>
                <value>
                    <fullName>Work Order Network</fullName>
                </value>
                <value>
                    <fullName>Xign</fullName>
                </value>
                <value>
                    <fullName>Big Sky</fullName>
                </value>
                <value>
                    <fullName>Maintenance Connection</fullName>
                </value>
                <value>
                    <fullName>Corrigo</fullName>
                </value>
                <value>
                    <fullName>OfficeTrax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Contract_Sub_type__c</fullName>
        <label>Contract Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract Pricing</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Menu Pricing</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Contract_Term_yrs__c</fullName>
        <label>Contract Term (Yrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Cost_Plus__c</fullName>
        <label>Cost Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Create_New_WO_for_PMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New WO for PMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Create_New_WO_for_PMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New WO for PMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_IVR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer IVR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Signature_forms__c</fullName>
        <label>Customer Signature forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>--Default--</fullName>
                    <default>true</default>
                    <label>--Default--</label>
                </value>
                <value>
                    <fullName>Disney</fullName>
                </value>
                <value>
                    <fullName>TJ Maxx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Default_Labor_Rate__c</fullName>
        <label>Default Labor Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Default_NTE__c</fullName>
        <inlineHelpText>NTE that will be used if no NTE is specified on trade</inlineHelpText>
        <label>Default NTE</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Effective_Date__c</fullName>
        <description>The date the contract has become active</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Contracts (End Customer)</relationshipLabel>
        <relationshipName>Service_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Friday_Multiplier__c</fullName>
        <label>Friday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Friday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Friday_OT_End_Time__c</fullName>
        <label>Friday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Friday_OT_Start_Time__c</fullName>
        <label>Friday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_H_W_Requirements__c</fullName>
        <label>H/W Requirements</label>
        <summaryFilterItems>
            <field>UNITY_Service_Contract_Line_Item__c.UNITY_Is_Preferred_Part__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Service_Contract_Line_Item__c.UNITY_Service_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Has_Preferred_Part__c</fullName>
        <label>Has Preferred Part</label>
        <summaryFilterItems>
            <field>UNITY_Service_Contract_Line_Item__c.UNITY_Is_Preferred_Part__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>UNITY_Service_Contract_Line_Item__c.UNITY_Service_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UNITY_Holiday_Multiplier__c</fullName>
        <description>Default Holiday Labor Multiplier</description>
        <label>Holiday Labor Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Holiday_Travel_Multiplier__c</fullName>
        <label>Holiday Travel Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_IS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes whether the Service Contract is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_IVR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Detail_Level__c</fullName>
        <label>Invoice Detail Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summary Only</fullName>
                </value>
                <value>
                    <fullName>Detail Only</fullName>
                </value>
                <value>
                    <fullName>Summary &amp; Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Required_from_Completion__c</fullName>
        <inlineHelpText>Customer must receive invoice X days after work is complete.</inlineHelpText>
        <label>Invoice Required from Completion Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoicing_Frequency__c</fullName>
        <label>Invoicing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Job</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Invoicing_Increments__c</fullName>
        <inlineHelpText>Round to nearest X hour or bill to actual IVR.</inlineHelpText>
        <label>Invoicing Increments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next ¼ hr</fullName>
                </value>
                <value>
                    <fullName>Next ½ hr</fullName>
                </value>
                <value>
                    <fullName>Bill to IVR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Invoicing_Method__c</fullName>
        <label>Invoicing Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Web-Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Service Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Is_Pass_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pass Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Margin__c</fullName>
        <label>Target Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Max_Allowable_Trip_Charges__c</fullName>
        <label>Max Allowable Trip Charges</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Maximum_Term_Yrs__c</fullName>
        <label>Maximum Term (Yrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Miner_IVR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Miner IVR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Miner_OT_End_Time_Hour__c</fullName>
        <label>Miner OT End Time (Hour)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Miner_OT_End_Time_Minute__c</fullName>
        <label>Miner OT End Time (Minute)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Miner_OT_Start_Time_Hour__c</fullName>
        <label>Miner OT Start Time (Hour)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Miner_OT_Start_Time_Minute__c</fullName>
        <label>Miner OT Start Time (Minute)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Minimum_Labor_Hours__c</fullName>
        <label>Minimum Labor Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Monday_Multiplier__c</fullName>
        <label>Monday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Monday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Monday_OT_End_Time__c</fullName>
        <label>Monday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Monday_OT_Start_Time__c</fullName>
        <label>Monday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Multi_Technician__c</fullName>
        <description>Multi Technician Multiplier</description>
        <label>Multi Technician</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Net_Payment_Terms__c</fullName>
        <label>Net Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 5</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 90+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_OT_Multiplier__c</fullName>
        <description>Default OT Labor Mutliplier</description>
        <label>OT Labor Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_OT_Travel_Multiplier__c</fullName>
        <label>OT Travel Multiplier</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_OT__c</fullName>
        <description>Overtime Multiplier</description>
        <label>Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Onsite_Money_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Money Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_PM_Plan_Go_Live_Date__c</fullName>
        <label>PM Plan Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_PO_Number_Required_After_Hours_Eme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Number Required-After Hours/Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_PO_Number_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO required to Bill</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>